highcontrast: more scrollbar fixes

--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -380,8 +380,18 @@ column-header:first-child .button {
 
     border-width: 0;
     border-color: transparent;
+}
 
+.scrollbars-junction {
+    background-color: @theme_scrollbar_trough;
+}
+
+.scrollbar.trough.vertical {
     box-shadow: inset 1px 0 shade(@theme_scrollbar_trough, 0.90);
+}
+
+.scrollbar.trough.horizontal {
+    box-shadow: inset 0 1px shade(@theme_scrollbar_trough, 0.90);
 }
 
 .scrollbar.slider {
